[package]
name = "mountc"
version = "0.1.0"
authors = ["Ashish <ckrackerx15@gmail.com>"]
edition = "2018"
description = "Mount Config is a environment based config management crate"
repository = "https://github.com/codekidX/mountc"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
